Show correct installed version number for fwupd updates

Currently we are simply re-using the version of the available update as
the installed version; instead we should set the installed version to
be the version of the currently-installed thing.

co-authored-by: Aleix Pol i Gonzalez <aleixpol@kde.org>

BUG: 411186
FIXED-IN: 5.25.5